--- a/index.html
+++ b/index.html
@@ -1,56 +1,197 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Notes</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' 'unsafe-inline';"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="app-container">
-        <!-- Сайдбар -->
-        <div class="sidebar">
-            <div class="sidebar-header">
-                <h1>Notes</h1>
-                <button class="new-note-btn" id="newNoteBtn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 20v-8m0 0V4m0 8h8m-8 0H4"/></svg>
-                </button>
+      <!-- Сайдбар -->
+      <div class="sidebar">
+        <div class="sidebar-header">
+          <button class="theme-toggle" id="themeToggle">
+            <div class="theme-slider">
+              <div class="theme-thumb">
+                <svg
+                  class="theme-sun"
+                  width="12"
+                  height="12"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <circle cx="12" cy="12" r="5"></circle>
+                  <line x1="12" y1="1" x2="12" y2="3"></line>
+                  <line x1="12" y1="21" x2="12" y2="23"></line>
+                  <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                  <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                  <line x1="1" y1="12" x2="3" y2="12"></line>
+                  <line x1="21" y1="12" x2="23" y2="12"></line>
+                  <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                  <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                </svg>
+                <svg
+                  class="theme-moon"
+                  width="12"
+                  height="12"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
+                  ></path>
+                </svg>
+              </div>
             </div>
-            <div class="notes-list" id="notesList">
-                <!-- Список заметок будет здесь -->
-            </div>
+          </button>
+          <div class="header-controls">
+            <button class="new-folder-btn" id="newFolderBtn">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="15"
+                height="15"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M22 19V9a2 2 0 0 0-2-2h-6.764a2 2 0 0 1-1.789-1.106l-.894-1.788A2 2 0 0 0 8.763 3H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2"
+                />
+              </svg>
+            </button>
+            <button class="new-note-btn" id="newNoteBtn">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="m12 8l-8 8v4h4l8-8m-4-4l2.869-2.869l.001-.001c.395-.395.593-.593.821-.667a1 1 0 0 1 .618 0c.228.074.425.272.82.666l1.74 1.74c.396.396.594.594.668.822a1 1 0 0 1 0 .618c-.074.228-.272.426-.668.822h0L16 12.001m-4-4l4 4"
+                />
+              </svg>
+            </button>
+          </div>
         </div>
 
-        <!-- Основной контент -->
-        <div class="content" id="contentArea">
-            <div class="empty-state" id="emptyState">
-            </div>
-
-            <div class="content-editor" id="contentEditor" style="display: none;">
-                <div class="content-header">
-                    <input 
-                        type="text" 
-                        class="note-title-input" 
-                        id="noteTitleInput"
-                        placeholder="Название"
-                        readonly
-                    >
-                    <button class="edit-btn" id="editBtn">Изменить</button>
-                    <button class="save-btn" id="saveBtn" style="display: none;" disabled>Сохранить</button>
-                </div>
-                <textarea 
-                    class="note-content" 
-                    id="noteContentInput"
-                    placeholder="Содержимое"
-                    readonly
-                ></textarea>
-            </div>
+        <!-- Вкладки папок -->
+        <div class="folders-tabs" id="foldersTabs">
+          <!-- Вкладки будут здесь -->
         </div>
+
+        <div class="notes-list" id="notesList">
+          <!-- Список заметок будет здесь -->
+        </div>
+      </div>
+
+      <!-- Основной контент -->
+      <div class="content" id="contentArea">
+        <div class="empty-state" id="emptyState">
+          <p>Выберите заметку или создайте новую</p>
+        </div>
+
+        <div class="content-editor" id="contentEditor" style="display: none">
+          <div class="content-header">
+            <input
+              type="text"
+              class="note-title-input"
+              id="noteTitleInput"
+              placeholder="Название"
+              readonly
+            />
+            <div class="header-controls">
+              <button class="delete-note-btn" id="deleteNoteBtn">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 1024 1024"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M360 184h-8c4.4 0 8-3.6 8-8zh304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32M731.3 840H292.7l-24.2-512h487z"
+                  />
+                </svg>
+              </button>
+              <button class="edit-btn" id="editBtn">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="m12 8l-8 8v4h4l8-8m-4-4l2.869-2.869l.001-.001c.395-.395.593-.593.821-.667a1 1 0 0 1 .618 0c.228.074.425.272.82.666l1.74 1.74c.396.396.594.594.668.822a1 1 0 0 1 0 .618c-.074.228-.272.426-.668.822h0L16 12.001m-4-4l4 4"
+                  />
+                </svg>
+              </button>
+              <button
+                class="save-btn"
+                id="saveBtn"
+                style="display: none"
+                disabled
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="m6 12l4.243 4.243l8.484-8.486"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <textarea
+            class="note-content"
+            id="noteContentInput"
+            placeholder="Содержимое"
+            readonly
+          ></textarea>
+        </div>
+      </div>
+    </div>
+
+    <!-- Контекстное меню для папок -->
+    <div class="context-menu" id="folderContextMenu">
+      <div class="context-menu-item" id="renameFolder">Переименовать</div>
+      <div class="context-menu-item" id="deleteFolder">Удалить</div>
     </div>
 
     <div class="save-indicator" id="saveIndicator">Сохранено</div>
 
     <script src="renderer.js"></script>
-</body>
+  </body>
 </html>
